--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-navigation-stack": "^2.5.1"
   },
   "devDependencies": {
-    "babel-preset-expo": "^8.1.0",
-    "@babel/core": "^7.0.0"
+    "@babel/core": "^7.0.0",
+    "babel-preset-expo": "^8.1.0"
   }
 }
